Fixed horizontal alignment on the BattleKin page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3331,13 +3331,3 @@ input, select, textarea {
 			}
 
 		}
-
-/* Float Container*/
-.float-container {
-    border: 3px solid #fff;
-    padding: 20px;
-}
-.float-child {
-    width: 50%;
-    float: left;
-}
